	them is unloaded (by unloadNamespace() as well as by
	detach(unload = TRUE)).

    o	The internal record-keeping by dyn.load/dyn.unload was
	incomplete, which this could crash R if a DLL that registered
	.External routines had earlier been unloaded.

    o	bessel[JY](x, nu) with nu a negative integer (a singular case)
	is now correct, analogously to besselI(), see PR#13556, below.



		CHANGES IN R VERSION 2.10.0


SIGNIFICANT USER-VISIBLE CHANGES

    o	Package help is now converted from Rd by the R-based converters
	that were first introduced in 2.9.0.  This means

	- Packages that were installed by R-devel after 2009-08-09
	  should not be used with earlier versions of R, and most
	  aspects of package help (including the runnable examples)
	  will be missing if they are so used.

	- Text, HTML and latex help and examples for packages
	  installed under the new system are converted on-demand from
	  stored parsed Rd files.  (Conversions stored in packages
	  installed under R < 2.10.0 are used if no parsed Rd files
	  are found.  It is recommended that such packages be
	  re-installed.)


    o	HTML help is now generated dynamically using an HTTP server
	running in the R process and listening on the loopback
	interface.

	- Those worried about security implications of such a server
	  can disable it by setting the environment variable
	  R_DISABLE_HTTPD to a non-empty value.  This disables
	  help.start() and HTML help (so text help is shown instead).

	- The Java/Javascript search engine has been replaced by an
	  HTML interface to help.search().  help.start() no longer has
	  an argument 'searchEngine' as it is no longer needed.

	- The HTML help can now locate cross-references of the form
          \link[pkg]{foo} and \link[pkg:foo]{bar} where 'foo' is an
          alias in the package, rather than the documented (basename
          of a) filename (since the documentation has been much
          ignored).


NEW FEATURES
